# MsgPrinter

./: .gitignore  README.md  message_printer.py  pyproject.toml  setup.py
docs/: doc_ru.md
message_printer/: __init__.py  message_printer.py
message_printer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: message_printer.py
